--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node server/server.js",
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
-    "test-watch":"nodemon --exec \"npm test\""
+    "test-watch": "nodemon --exec \"npm test\""
   },
-  "engines":{
-    "node":"6.11.1"
+  "engines": {
+    "node": "6.11.1"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "express": "^4.16.3",
     "mocha": "^5.0.5",
     "mongodb": "^3.0.5",
+    "mongoose": "^5.0.14",
     "nodemon": "^1.17.3",
     "supertest": "^3.0.0"
   }
