--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "expect": "^22.4.3",
     "express": "^4.16.3",
     "mocha": "^5.0.5",
     "mongodb": "^3.0.5",
     "mongoose": "^4.2.9",
     "nodemon": "^1.17.3",
     "supertest": "^3.0.0"
+  },
+  "devDependencies": {
+    "expect": "^22.4.3"
   }
 }
