--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "lodash": "^4.17.5",
     "mocha": "^5.0.5",
     "mongodb": "^3.0.5",
     "mongoose": "^4.2.9",
