--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.5",
     "mocha": "^5.0.5",
     "mongodb": "^3.0.5",
     "mongoose": "^4.2.9",
     "nodemon": "^1.17.3",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "validator": "^9.4.1"
   },
   "devDependencies": {
     "expect": "^22.4.3"
